# skills-studio

./: .gitignore  AGENTS.md  Cargo.toml  README.md  design.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release-tidy.yml  release.yml
app/: globals.css
client/desktop/: Cargo.toml  tauri.conf.json
client/desktop/src/: lib.rs
client/web/app/: router.tsx
client/web/components/: LiveEditor.tsx  Modal.tsx  NavBar.tsx  NewTerminalDialog.tsx  TerminalsWorkspace.tsx  useAutosave.ts  useExternalFileSync.ts
client/web/lib/: api.ts  mining.ts  remote.ts  routes.ts  types.ts
components/: FilePane.tsx  FileTree.tsx  Home.tsx  LiveEditor.tsx  SkillApp.tsx  SkillDocument.tsx  TopBar.tsx  ui.tsx  useAutosave.ts
crates/skill-core/: Cargo.toml
crates/skill-core/src/: commitmsg.rs  discover.rs  engine.rs  gitops.rs  gpu.rs  lib.rs  skill.rs  sync.rs
crates/skill-server/: Cargo.toml
crates/skill-server/src/: main.rs
crates/skill-term/src/: lib.rs
scripts/: fetch-cuda-backend.sh  fetch-engine.sh  sign-windows.ps1  stamp-version.sh
server/skill-core/: Cargo.toml
server/skill-core/src/: agents.rs  commitmsg.rs  discover.rs  engine.rs  filetypes.rs  github.rs  gitops.rs  gpu.rs  lib.rs  mining.rs  pathsafe.rs  process.rs  remotesync.rs  secrets.rs  skill.rs  switchboard.rs  sync.rs  update.rs
server/skill-server/: Cargo.toml
server/skill-server/src/: lib.rs  main.rs  proxy.rs  remote_api.rs
server/skill-server/tests/: proxy_smoke.rs
server/skill-term/: Cargo.toml
server/skill-term/src/: lib.rs
skills/skill-miner/: SKILL.md
skills/skill-miner/references/: quality-bar.md
skills/skill-miner/scripts/: discover.py  extract.py
skills/skill-studio/: SKILL.md
src/: App.tsx  globals.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/app/: router.tsx
src/components/: FileIcon.tsx  FilePane.tsx  Home.tsx  ManagePanel.tsx  NavBar.tsx  NewSkillDialog.tsx  NewTerminalDialog.tsx  SecretsManager.tsx  SkillApp.tsx  SkillDocument.tsx  TopBar.tsx  editorState.ts  useManualSave.ts
src/lib/: api.ts  routes.ts
src/pages/home/: HomeRoute.tsx
src/pages/studio/: DiffView.tsx  ManagePanel.tsx  SaveVersionDialog.tsx  SourceControl.tsx  StudioHistoryRoute.tsx  StudioLayout.tsx  TopBar.tsx
(+19 files in other folders)
