[package]
name = "skill-core"
version = "0.1.0"
edition = "2021"
description = "Transport-agnostic skill filesystem + discovery logic (no GUI deps)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
dirs = "5"
base64 = "0.22"
